--- a/src/energy.tex
+++ b/src/energy.tex
@@ -135,10 +135,10 @@
 
 % Example: 
  \begin{keypoints}
- \item Dynamical core spurious TE dissipation is $-0.3W/m^2$ to $-1W/m^2$ at 1 degree
- \item Constant-pressure assumption in physics leads to $0.3W/m^2$ spurious TE source
- \item There can easily be compensating errors in TE budget
-
+ \item Spurious total energy dissipation in dynamical core is $-0.3W/m^2$ to $-1W/m^2$ at 1 degree
+ \item Constant-pressure assumption in physics leads to $0.3W/m^2$ spurious total energy source
+ \item There can easily be compensating errors in total energy budget
+%               x         x         x         x         x         x         x         x         x         x100
 % \item Limiters on vertical remapping increase TE dissipation to $-0.2W/m^2$
 % \item Moist physics forcing increases spurious TE  dissipation in dynamical core
 
@@ -178,7 +178,7 @@
 %% \begin{abstract} starts the second page 
 
 \begin{abstract}
-A closed total energy (TE) budget is of utmost importance in coupled climate system modeling; in particular, the dynamical core or physics-dynamics coupling should ideally not lead to spurious TE sources/sinks. To assess this in a global climate model, a detailed analysis of the spurious sources/sinks of TE in NCAR's Community Atmosphere Model (CAM) is given. This includes spurious total energy changing steps in the parameterization suite, the dynamical core, energy formula discrepancies and physics-dynamics coupling.  The latter leads to a  detailed discussion of the pros and cons of various physics-dynamics coupling methods commonly used in climate/weather modeling.  
+A closed total energy (TE) budget is of utmost importance in coupled climate system modeling; in particular, the dynamical core or physics-dynamics coupling should ideally not lead to spurious TE sources/sinks. To assess this in a global climate model, a detailed analysis of the spurious sources/sinks of TE in NCAR's Community Atmosphere Model (CAM) is given. This includes spurious TE changing steps in the parameterization suite, the dynamical core, TE definition discrepancies and physics-dynamics coupling.  The latter leads to a  detailed discussion of the pros and cons of various physics-dynamics coupling methods commonly used in climate/weather modeling.  
 
 %It is shown that the dynamical core dissipates energy at $-0.3W/m^2$ to $1W/m^2$ depending on configuration and numerical methods at $1^\circ$ resolution. Most TE dissipation comes viscosity. Shape-preserving limiters on the vertical remapping used in quasi-Lagrangian vertical coordinate models increase TE dissipation of the mapping from $-0.01W/m^2$ $-0.2W/m^2$. TE dissipation in dynamical core increases drastically with rougher topography and the inclusion of moist physics. Hence TE analysis of simplified (in particular dry) setups does not necessarily provide a good estimate of the TE budget under `real-world' conditions. Physics-dynamics coupling can be a $0.5W/m^2$ TE source and the constant-pressure assumption along with the requirement for a closed mass budget leads to a $0.3W/m^2$ TE source.
 \end{abstract}
@@ -221,9 +221,9 @@ The atmospheric equations of motion conserve TE but the discretizations used in 
 
 Here we focus on versions of the Community Atmosphere Model (CAM) that use the spectral-element \citep[SE, ][]{LetAl2018JAMES} and finite-volume \citep[FV, ][]{L2004MWR} dynamical cores. These dynamical cores couple with physics in a time-split manner, i.e. physics receives a state updated by dynamics \citep[see ][ for a discussion of time-split versus process split physics-dynamics coupling in the context of CAM]{W2002MWR}. In its pure time-split form the physics tendencies are added to the state previously produced by the dynamical core and the resulting state provides the initial state for the subsequent dynamical core calculation. We refer to this as state-updating (or {\tt{ftype=1}}). Alternatively, when the dynamical core adopts a shorter time step than the physics, say {\tt{nsplit}} sub-steps, then (1/{\tt{nsplit}})th of the physics-calculated tendency is added to the state before each dynamics sub-step. We refer to this modification of time-splitting as {\em{dribbling}} (or {\tt{ftype=0}}). CAM-FV uses the state-update approach while CAM-SE has options to use state-update ({\tt{ftype=1}}), {\em{dribbling}} ({\tt{ftype=0}}) or a combination of the two (i.e. mass-variables use state-updating and remaining variables use {\em{dribbling}}; referred to as {\tt{ftype=2}}). The dribbling variants can lead to spurious sources or sinks of TE (and mass) referred to as physics-dynamics coupling errors.
 
-The dynamical core usually has implicit or explicit filters to control spurious noise near the grid scale which will lead to energy dissipation \citep{T2008JCP,JW2010LNCSE}. Similarly models often have sponge layers to control the solution near the top of the model that may be a sink of TE. There are examples of numerical discretizations of the adiabatic frictionless equations motion that are designed so that TE is conserved in the absence of time-truncation and filtering errors {\color{red}{[ref Cotter, Eldred, etc.]}}, e.g., mimetic spectral-element discretizations such as the one used in the horizontal in CAM-SE \citep{T2011LNCSEb}. These provide consistency between the discrete momentum and thermodynamic equations leading to global conservation associated with the conversion of potential to kinetic energy. In spectral transform models it is customary to add the energy change due to explicit diffusion on momentum back as heating (referred to as frictional heating), so that the diffusion of momentum does not affect the TE budget \citep[see, e.g., p.71 in ][]{CAM5}. This is also done in CAM-SE \citep{LetAl2018JAMES}. 
+The dynamical core usually has implicit or explicit filters to control spurious noise near the grid scale which will lead to energy dissipation \citep{T2008JCP,JW2010LNCSE}. Similarly models often have sponge layers to control the solution near the top of the model that may be a sink of TE. There are examples of numerical discretizations of the adiabatic frictionless equations motion that are designed so that TE is conserved in the absence of time-truncation and filtering errors \citep[e.g., ][]{ER2017GMD,MC2013QJRMS}, e.g., mimetic spectral-element discretizations such as the one used in the horizontal in CAM-SE \citep{T2011LNCSEb}. These provide consistency between the discrete momentum and thermodynamic equations leading to global conservation associated with the conversion of potential to kinetic energy. In spectral transform models it is customary to add the energy change due to explicit diffusion on momentum back as heating (referred to as frictional heating), so that the diffusion of momentum does not affect the TE budget \citep[see, e.g., p.71 in ][]{CAM5}. This is also done in CAM-SE \citep{LetAl2018JAMES}. 
 
-It is the purpose of this paper to provide a provide a detailed global TE analysis of CAM. We assess TE dissipation due to various steps in the model algorithms. The paper is outlined as follows. In section \ref{sec:methods} the continuous TE formulas are given and a detailed description of spurious TE sources/sinks that can occur in a model as a whole, and the associated diagnostics used to perform the detailed TE analysis, are defined. In section \ref{sec:results} the model is run in various configuration to assess their effects on TE conservation. This includes various physics-dynamics coupling experiments leading to a rather detailed discussion of mass budget closure. We also investigate the effect on limiter in the vertical remapping algorithm, assess energy discrepancy errors and impacts on TE by simplifying surface conditions and dry atmosphere experiments. The paper ends with conclusions.
+It is the purpose of this paper to provide a provide a detailed global TE analysis of CAM. We assess TE dissipation due to various steps in the model algorithms. The paper is outlined as follows. In section \ref{sec:methods} the continuous TE formulas are given and a detailed description of spurious TE sources/sinks that can occur in a model as a whole, and the associated diagnostics used to perform the detailed TE analysis, are defined. In section \ref{sec:results} the model is run in various configuration to assess their effects on TE conservation. This includes various physics-dynamics coupling experiments leading to a rather detailed discussion of mass budget closure. We also investigate the effect of using a limiter in the vertical remapping of momentum, assess energy discrepancy errors and impacts on TE by simplifying surface conditions and dry atmosphere experiments. The paper ends with conclusions.
 
 
 %For example, the discrete TE consistent with the dynamical core may differ from the one used in physics or,  even worse, the TE that the continuous equations of motion conserve is different between the dynamical core and physics.\\
@@ -456,10 +456,10 @@ If $\partial \gi{E}^{({pdc})}=0$ \eqref{eq:budget_efix} can be used to compute $
 \label{eq:discre}
 \partial \gi{E}^{({discr})}=-\partial \gi{E}_{phys}^{({efix})}-\partial \gi{E}_{phys}^{({pwork})}-\partial \gi{E}_{dyn}^{({adiab})}, \text{ assuming }\partial \gi{E}^{(pdc)}=0.
 \end{equation}
-Note that we can not use \eqref{eq:pdc} to compute $\partial \gi{E}^{({discr})}$ since $\gi{E}_{phys}\neq \gi{E_{dyn}}$.
+Note that we can not use \eqref{eq:pdc} to compute $\partial \gi{E}^{({discr})}$ since $\gi{E}_{phys}\neq \gi{E}_{dyn}$.
 %
 \begin{sidewaystable}
-\caption{TE tendencies in units of $W/m^2$ associated with various aspects of CAM-SE run in AMIP-type setup (unless other wise noted). Column 1 is the identifier for the model configuration. {\em{TE consistent}} is the TE consistent version described in section \ref{sec:consistent}, {\em{`dribbling' A}} and {\em{`dribbling' B}} refer to the {\em{TE consistent}} version but different physics-dynamics coupling methods (section \ref{se:pdc_problem}), {\em{vert limiter}} is the {\em{TE consistent}} version using limiters in the vertical remapping of momentum (section \ref{sec:ppm}), {\em{smooth topo}} is the {\em{TE consistent}} version using smoother topography (see section \ref{sec:topo}), {\em{energy discr}} is the version with energy discrepancy (but no physics-dynamics coupling errors) described in section \ref{sec:ediscr}, {\em{default}} is {\em{energy discr}} version with {\tt{ftype=2}} which is the current default CAM-SE (section \ref{sec:ediscr}), {\em{QPC6}} and {\em{FHS94}} are simplified setups (aqua-planet and Held-Suarez, respectively) based on the {\em{TE consistent}} configuration (section \ref{sec:QPC6} and \ref{sec:FHS94}, respectively), {\em{CAM-FV}} confgiuration the SE dynamical core is replaced with the finite-volume core  the dynamical core with (section \ref{sec:cam-fv}), and {\em{CAM-SE-CSLAM}} is the quasi equal-area physics grid configuration (section \ref{sec:cslam}). Column 2 is $\mathcal{N}=${\tt{qsize\_condensate\_loading}} identifying how many water species are thermodynamically active in the dynamical core (see section \ref{sec:defE} for details). Column 3, {\tt{lcp\_moist}}, indicates whether or not the heat capacity includes water variables or not and column three show physics-dynamics coupling method {\tt{ftype}}. The TE tendencies $\partial \gi{E}$ in columns 5-14 are defined in section \ref{sec:diagnostics}. If $\partial \gi{E}$ is less than $10^{-5}$ $W/m^2$ it is set to zero in the table. Significant changes compared to the baseline ({\em{TE consistent}} configuration) discussed in the main text are in bold font.}
+\caption{TE tendencies in units of $W/m^2$ associated with various aspects of CAM-SE run in AMIP-type setup (unless otherwise noted). Column 1 is the identifier for the model configuration. {\em{TE consistent}} is the TE consistent version described in section \ref{sec:consistent}, {\em{`dribbling' A}} and {\em{`dribbling' B}} refer to the {\em{TE consistent}} version but different physics-dynamics coupling methods (section \ref{se:pdc_problem}), {\em{vert limiter}} is the {\em{TE consistent}} version using limiters in the vertical remapping of momentum (section \ref{sec:ppm}), {\em{smooth topo}} is the {\em{TE consistent}} version using smoother topography (see section \ref{sec:topo}), {\em{energy discr}} is the version with energy discrepancy (but no physics-dynamics coupling errors) described in section \ref{sec:ediscr}, {\em{default}} is {\em{energy discr}} version with {\tt{ftype=2}} which is the current default CAM-SE (section \ref{sec:ediscr}), {\em{QPC6}} and {\em{FHS94}} are simplified setups (aqua-planet and Held-Suarez, respectively) based on the {\em{TE consistent}} configuration (section \ref{sec:QPC6} and \ref{sec:FHS94}, respectively), {\em{CAM-FV}} is the configuration where the SE dynamical core is replaced with the finite-volume core (section \ref{sec:cam-fv}), and {\em{CAM-SE-CSLAM}} is the quasi equal-area physics grid configuration (section \ref{sec:cslam}). Column 2 is $\mathcal{N}=${\tt{qsize\_condensate\_loading}} identifying how many water species are thermodynamically active in the dynamical core (see section \ref{sec:defE} for details). Column 3, {\tt{lcp\_moist}}, indicates whether or not the heat capacity includes water variables or not and column three show physics-dynamics coupling method {\tt{ftype}}. The TE tendencies $\partial \gi{E}$ in columns 5-14 are defined in section \ref{sec:diagnostics}. If $\partial \gi{E}$ is less than $10^{-5}$ $W/m^2$ it is set to zero in the Table. Significant changes compared to the baseline ({\em{TE consistent}} configuration) discussed in the main text are in bold font.}
 \label{table:TE}
 \begin{tabular}{c|ccc|ccc|cccccc|c}
 Descriptor & $\mathcal{N}$ & {\tt{lcp\_moist}} &  {\tt{ftype}}  & $\partial \gi{E}_{phys}^{({pwork})}$ &  $\partial \gi{E}_{phys}^{({efix})}$ &  $\partial \gi{E}_{phys}^{({discr})}$ &  $\partial \gi{E}_{dyn}^{({2D})}$ & $\partial \gi{E}_{dyn}^{({hvis})}$ & $\partial \gi{E}_{dyn}^{({fheat})}$ & $\partial \gi{E}_{dyn}^{(res)}$ & $\partial \gi{E}_{dyn}^{(remap)}$ & $\partial \gi{E}_{dyn}^{(adiab)}$  & $\partial \gi{E}^{(pdc)}$\\
@@ -487,19 +487,19 @@ Descriptor & $\mathcal{N}$ & {\tt{lcp\_moist}} &  {\tt{ftype}}  & $\partial \gi{
   \end{sidewaystable}
 \section{Results}
 \label{sec:results}
-A series of simulations have been performed with CESM2.1 using CAM version 6 (CAM6) physics (\url{https://doi.org/10.5065/D67H1H0V}). All simulations are at nominally $\sim1^{\circ}$ horizontal resolution (for CAM-SE that is 30$\times$30 elements on each cubed-sphere face and for CAM-FV its 192$\times$288 latitudes-longitudes and 32 levels in the vertical. Various configurations are used and referred to in terms of the $COMPSET$ (Component Set) value used in CESM2.1: 
+A series of simulations have been performed with CESM2.1 using CAM version 6 (CAM6) physics (\url{https://doi.org/10.5065/D67H1H0V}). All simulations are at nominally $\sim1^{\circ}$ horizontal resolution (for CAM-SE that is 30$\times$30 elements on each cubed-sphere face and for CAM-FV its 192$\times$288 latitudes-longitudes) and using 32 levels in the vertical. Various configurations are used and referred to in terms of the $COMPSET$ (Component Set) value used in CESM2.1: 
 \begin{itemize}
 \item {\em{FSH94}}: Dry dynamical core configuration based on Held-Suarez forcing which relaxes temperature to a zonally symmetric equilibrium temperature profile and simple linear drag at the lower boundary \citep{HS1994BAMS}. 
 \item {\em{QPC6}}: The QPC6 configuration refers to an aqua-planet setup using CAM6 physics; i.e. an ocean covered planet in perpetual equinox, with fixed, zonally symmetric sea surface temperatures \citep{NH2000ASL,MWO2016JAMES}. 
 \item {\em{F2000climo}}: The F2000climo configuration refers to `real-world' AMIP (Atmospheric Model Intercomparison Project) type simulations using perpetual year 2000 SST (Sea Surface Temperature) boundary conditions.
 \end{itemize}
-Unless otherwise noted all simulations are 13 months in duration and the last 12 months are used in the analysis. Total energy budgets discussed below are summarized in table \ref{table:TE}. The section titles below include the `Descriptor' from Table \ref{table:TE} to make it easier for the reader to match table entries with discussion in the text. Also, important changes to TE dissipation are marked with bold font in table \ref{table:TE}.
+Unless otherwise noted all simulations are 13 months in duration and the last 12 months are used in the analysis. Total energy budgets discussed below are summarized in Table \ref{table:TE}. The section titles below include the `Descriptor' from Table \ref{table:TE} to make it easier for the reader to match Table entries with discussion in the text. Also, important changes to TE dissipation are marked with bold font in Table \ref{table:TE}.
 
 
  \begin{figure}[h]
  \centering
  \includegraphics[width=35pc]{figs/dEdt.pdf}
- \caption{Monthly averaged TE tendencies as a function of time for various aspects of the TE consistent configuration of CAM-SE run in AMIP-type configuration. Left Figure shows $\partial \gi{E}$ TE tendencies in physics and, for comparison, TE tendency for the adiabatic dynamical core. The right plot shows the break-down of $\partial \gi{E}$ for the dynamical core. The purpose of these plots is to show that the energy tendency from the dynamical core is quite constant (to within ~0.02 $W/m^2$ or less) so only one month simulations is enough to assess energy diagnostics for the dynamical core. For more details see Section \ref{sec:consistent}.}
+ \caption{Monthly averaged TE tendencies as a function of time for various aspects of the TE consistent configuration of CAM-SE run in AMIP-type configuration. Left Figure shows $\partial \gi{E}$ TE tendencies in physics and, for comparison, TE tendency for the adiabatic dynamical core. The right plot shows the break-down of $\partial \gi{E}$ for the dynamical core. The purpose of these plots is to show that the energy tendency from the dynamical core is quite constant (to within $\sim 0.02W/m^2$ or less) so only one month simulations is enough to assess energy diagnostics for the dynamical core. For more details see Section \ref{sec:consistent}.}
  \label{fig:dEdt(t)}
   \end{figure}
 
@@ -762,7 +762,7 @@ A purpose of this paper is to encourage modeling groups to perform similar analy
 
 
 \acknowledgments
-The National Center for Atmospheric Research is sponsored by the National Science Foundation. We thank NCAR's Computational and Information Systems Laboratory (CISL) and NCAR's Climate and Global Dynamics division (CGD) for computational resources. The data used to perform the energy analysis can be found on {\url{https://github.com/PeterHjortLauritzen/2018-JAMES-energy}}.
+The National Center for Atmospheric Research is sponsored by the National Science Foundation. We thank NCAR's Computational and Information Systems Laboratory (CISL) and NCAR's Climate and Global Dynamics division (CGD) for computational resources. The data used to perform the energy analysis can be found at {\url{https://github.com/PeterHjortLauritzen/2018-JAMES-energy}}.
 
 %We thank two anonymous reviewers for their helpful comments and time put into reviewing this very long/technical paper. Herrington, Reed and Lauritzen are grateful to the NCAR Advance Study Program graduate visitor program for funding Herrington's 9-month visit to NCAR. We thank NCAR's Computational and Information Systems Lab (CISL) for providing computing support. Goldhaber was partially supported by the U.S. Department of Energy Office of Biological and Environmental Research, Work Package 12-015334 ``Multiscale Methods for Accurate, Efficient, and Scale-Aware Models of the Earth System''. Medeiros acknowledges support by the Regional and Global Climate Modeling Program of the U.S. Department of Energy's Office of Science,  Cooperative Agreement DE-FC02-97ER62402. Benedict was funded by National Science Foundation (NSF) Rapid Response Research (RAPID) award AGS-1547910. The data presented in this manuscript is available at {\url{https://github.com/PeterHjortLauritzen/2017-JAMES-CESM2-SE.git}}.
 
