--- a/src/bib.bib
+++ b/src/bib.bib
@@ -8113,3 +8113,93 @@ doi = {10.1175/MWR-D-17-0345.1}
 }
 
 
+@Article{ER2017GMD,
+AUTHOR = {Eldred, C. and Randall, D.},
+TITLE = {Total energy and potential enstrophy conserving schemes for the shallow water
+equations using Hamiltonian methods -- Part 1: Derivation and
+properties},
+JOURNAL = gmd,
+VOLUME = {10},
+YEAR = {2017},
+NUMBER = {2},
+PAGES = {791--810},
+DOI = {10.5194/gmd-10-791-2017}
+}
+
+
+@article{MC2013QJRMS,
+author = {McRae, Andrew T. T. and Cotter, Colin J.},
+title = {Energy- and enstrophy-conserving schemes for the shallow-water equations, based on mimetic finite elements},
+journal = qjrms,
+volume = {140},
+year = {2013},
+number = {684},
+pages = {2223-2234},
+doi = {10.1002/qj.2291}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@article{doi:10.1002/2014MS000368,
+author = {Wan, Hui and Rasch, Philip J. and Taylor, Mark A. and Jablonowski, Christiane},
+title = {Short-term time step convergence in a climate model},
+journal = {Journal of Advances in Modeling Earth Systems},
+volume = {7},
+number = {1},
+pages = {215-225},
+keywords = {climate model, time integration, convergence, numerical error},
+doi = {10.1002/2014MS000368},
+url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1002/2014MS000368},
+eprint = {https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1002/2014MS000368},
+abstract = {Abstract This paper evaluates the numerical convergence of very short (1 h) simulations carried out with a spectral-element (SE) configuration of the Community Atmosphere Model version 5 (CAM5). While the horizontal grid spacing is fixed at approximately 110 km, the process-coupling time step is varied between 1800 and 1 s to reveal the convergence rate with respect to the temporal resolution. Special attention is paid to the behavior of the parameterized subgrid-scale physics. First, a dynamical core test with reduced dynamics time steps is presented. The results demonstrate that the experimental setup is able to correctly assess the convergence rate of the discrete solutions to the adiabatic equations of atmospheric motion. Second, results from full-physics CAM5 simulations with reduced physics and dynamics time steps are discussed. It is shown that the convergence rate is 0.4—considerably slower than the expected rate of 1.0. Sensitivity experiments indicate that, among the various subgrid-scale physical parameterizations, the stratiform cloud schemes are associated with the largest time-stepping errors, and are the primary cause of slow time step convergence. While the details of our findings are model specific, the general test procedure is applicable to any atmospheric general circulation model. The need for more accurate numerical treatments of physical parameterizations, especially the representation of stratiform clouds, is likely common in many models. The suggested test technique can help quantify the time-stepping errors and identify the related model sensitivities.}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@article{doi:10.1002/qj.2291,
+author = {McRae, Andrew T. T. and Cotter, Colin J.},
+title = {Energy- and enstrophy-conserving schemes for the shallow-water equations, based on mimetic finite elements},
+journal = {Quarterly Journal of the Royal Meteorological Society},
+volume = {140},
+number = {684},
+pages = {2223-2234},
+keywords = {mixed finite element, energy conservation, shallow-water equations},
+doi = {10.1002/qj.2291},
+url = {https://rmets.onlinelibrary.wiley.com/doi/abs/10.1002/qj.2291},
+eprint = {https://rmets.onlinelibrary.wiley.com/doi/pdf/10.1002/qj.2291},
+abstract = {This article presents families of spatial discretizations of the nonlinear rotating shallow-water equations that conserve both energy and potential enstrophy. These are based on two-dimensional mixed finite-element methods and hence, unlike some finite-difference methods, do not require an orthogonal grid. Numerical verification of the aforementioned properties is also provided.}
+}
+
