--- a/src/bib.bib
+++ b/src/bib.bib
@@ -8203,3 +8203,10 @@ eprint = {https://rmets.onlinelibrary.wiley.com/doi/pdf/10.1002/qj.2291},
 abstract = {This article presents families of spatial discretizations of the nonlinear rotating shallow-water equations that conserve both energy and potential enstrophy. These are based on two-dimensional mixed finite-element methods and hence, unlike some finite-difference methods, do not require an orthogonal grid. Numerical verification of the aforementioned properties is also provided.}
 }
 
+@misc{cheyenne,
+  author       = {{Computational and Information Systems Laboratory}}, 
+  title        = {Cheyenne: {HPE}/{SGI} {ICE} {XA} {S}ystem ({C}limate {S}imulation {L}aboratory), {B}oulder, {CO}: {N}ational {C}enter for {A}tmospheric {R}esearch},
+  year         = {2017},
+  institution  = {National Center for Atmospheric Research},
+  doi          = {10.5065/D6RX99HX}
+}
