--- a/src/energy.tex
+++ b/src/energy.tex
@@ -158,13 +158,6 @@
 %  Key Points summarize the main points and conclusions of the article
 %  Each must be 100 characters or less with no special characters or punctuation 
 
-\begin{keypoints}
-\item ...
-%\item The CESM2.0 release of the spectral-element dynamical core (CAM-SE) is documented
-%\item Model has comprehensive treatment of condensates and energy
-%\item The CAM-SE model has been sped-up significantly compared to its predecessor CAM-HOMME
-\end{keypoints}
-
 %% ------------------------------------------------------------------------ %%
 %
 %  ABSTRACT
@@ -490,7 +483,7 @@ Descriptor & $\mathcal{N}$ & {\tt{lcp\_moist}} &  {\tt{ftype}}  & $\partial \gi{
   \end{sidewaystable}
 \section{Results}
 \label{sec:results}
-A series of simulations have been performed with CESM2.1 using CAM version 6 (CAM6) physics (\url{https://doi.org/10.5065/D67H1H0V}). All simulations are at nominally $\sim1^{\circ}$ horizontal resolution (for CAM-SE that is 30$\times$30 elements on each cubed-sphere face and for CAM-FV its 192$\times$288 latitudes-longitudes) and using 32 levels in the vertical. Various configurations are used and referred to in terms of the $COMPSET$ (Component Set) value used in CESM2.1: 
+A series of simulations have been performed with CESM2.1 using CAM version 6 (CAM6) physics (\url{https://doi.org/10.5065/D67H1H0V}) on NCAR's Cheyenne cluster \citep{cheyenne}. All simulations are at nominally $\sim1^{\circ}$ horizontal resolution (for CAM-SE that is 30$\times$30 elements on each cubed-sphere face and for CAM-FV its 192$\times$288 latitudes-longitudes) and using 32 levels in the vertical. Various configurations are used and referred to in terms of the $COMPSET$ (Component Set) value used in CESM2.1: 
 \begin{itemize}
 \item {\em{FSH94}}: Dry dynamical core configuration based on Held-Suarez forcing which relaxes temperature to a zonally symmetric equilibrium temperature profile and simple linear drag at the lower boundary \citep{HS1994BAMS}. 
 \item {\em{QPC6}}: The QPC6 configuration refers to an aqua-planet setup using CAM6 physics; i.e. an ocean covered planet in perpetual equinox, with fixed, zonally symmetric sea surface temperatures \citep{NH2000ASL,MWO2016JAMES}. 
@@ -601,7 +594,7 @@ A detailed total energy (TE) analysis of the Community Atmosphere Model (CAM) us
 
 In CAM physics the parameterizations have, by design, a closed energy budget (change in TE is balanced by fluxes in/out the top and bottom of physics columns) if it is assumed that surface pressure is constant. The surface pressure changes due to fluxes of mass (e.g., water vapor) in/out of the column which changes energy (referred to as pressure work). The pressure work with the full moist physics configuration is very stable across different configurations at $\sim 0.3W/m^2$. The TE dissipation of the spectral element (SE) dynamical core varies across configurations. Aspects that influence TE is the presence of topography, the amount of topography smoothing and moist physics. By smoothing topography more the TE dissipation is cut in half from $\sim -0.6W/m^2$ to $\sim -0.3W/m^2$; and reduces by a factor of five ($\sim-0.1W/m^2$) if no topography is present at all (aqua-planet setup). Moist physics forcing also contributes significantly to the TE budget. For example, in the dry Held-Suarez setup TE dissipation of the SE dynamical core reduces to $-0.03W/m^2$. Topography and moist physics force the dynamical core at the grid scale and hence the viscosity operators are more active. Consistent with this statement is that the changes in TE discussed so far are almost entirely due to the viscosity operator TE dissipation. For CAM-SE the spurious TE dissipation in the adiabatic dynamical core is $\sim-0.6W/m^2$ in `real-world' configurations. For comparison, CAM-FV's spurious TE change due to the adiabatic dynamical core is $\sim-1W/m^2$. 
 
-By further breaking down the TE dissipation in the SE dynamical core it is observed the vertical remapping accounts for only $\sim-0.01W/m^2$. That said, if the shape-preserving limiters in the vertical remapping are invoked the TE dissipation increases 20-fold. In CAM-SE the kinetic energy dissipation is added as heating in the thermodynamic equation (also referred to as frictional heating) and it remains very stable across configurations that include moisture ($\sim 0.5W/m^2$) and reduces drastically for dry atmosphere setups (factor 4 reduction). Hence this term is an important term in the TE budget. The TE budget for the dynamical core is dominated by TE change due to hyperviscosity; TE errors due to time-truncation and frictionless equations of motion are negligible. Errors associated with physics-dynamics coupling (if applicable) are approximately $0.5W/m^2$. Due to the evolutionary nature of model development the SE dynamical core's continuous equation of motion conserve a mode comprehensive TE compared to the physical parameterizations. This TE discrepancy leads to an approximately $0.5W/m^2$ total energy source. If running the physics on a different grid than the dynamical introduces TE mapping errors such as in CAM-SE-CSLAM (Conservative Semi-Lagrangian Multi-tracer transport scheme). These errors are, however, rather small $-0.007W/m^2$.
+By further breaking down the TE dissipation in the SE dynamical core it is observed the vertical remapping accounts for only $\sim-0.01W/m^2$. That said, if the shape-preserving limiters in the vertical remapping are invoked the TE dissipation increases 20-fold. In CAM-SE the kinetic energy dissipation is added as heating in the thermodynamic equation (also referred to as frictional heating) and it remains very stable across configurations that include moisture ($\sim 0.5W/m^2$) and reduces drastically for dry atmosphere setups (factor 4 reduction). Hence this term is an important term in the TE budget. The TE budget for the dynamical core is dominated by TE change due to hyperviscosity; TE errors due to time-truncation and frictionless equations of motion are negligible. Errors associated with physics-dynamics coupling (if applicable) are approximately $0.5W/m^2$. Due to the evolutionary nature of model development the SE dynamical core's continuous equation of motion conserve a mode comprehensive TE compared to the physical parameterizations. This TE discrepancy leads to an approximately $0.5W/m^2$ total energy source. Running physics on a different grid than the dynamical introduces TE mapping errors such as in CAM-SE-CSLAM (Conservative Semi-Lagrangian Multi-tracer transport scheme). These errors are, however, rather small $-0.007W/m^2$.
 
 A purpose of this paper is to encourage modeling groups to perform similar analysis to better understand the total energy flow in Earth system models. As has been demonstrated in this paper there can easily be compensating errors in the system which can not be identified without a detailed TE analysis.
 
@@ -773,7 +766,7 @@ A purpose of this paper is to encourage modeling groups to perform similar analy
 
 
 \acknowledgments
-The National Center for Atmospheric Research is sponsored by the National Science Foundation. We thank NCAR's Computational and Information Systems Laboratory (CISL) and NCAR's Climate and Global Dynamics division (CGD) for computational resources. The data used to perform the energy analysis can be found at {\url{https://github.com/PeterHjortLauritzen/2018-JAMES-energy}}.
+The National Center for Atmospheric Research is sponsored by the National Science Foundation. Computing resources ({\url{doi:10.5065/D6RX99HX}}) were provided by the Climate Simulation Laboratory at NCAR's Computational and Information Systems Laboratory, sponsored by the National Science Foundation and other agencies. The data used to perform the energy analysis can be found at {\url{https://github.com/PeterHjortLauritzen/2018-JAMES-energy}}.
 
 %We thank two anonymous reviewers for their helpful comments and time put into reviewing this very long/technical paper. Herrington, Reed and Lauritzen are grateful to the NCAR Advance Study Program graduate visitor program for funding Herrington's 9-month visit to NCAR. We thank NCAR's Computational and Information Systems Lab (CISL) for providing computing support. Goldhaber was partially supported by the U.S. Department of Energy Office of Biological and Environmental Research, Work Package 12-015334 ``Multiscale Methods for Accurate, Efficient, and Scale-Aware Models of the Earth System''. Medeiros acknowledges support by the Regional and Global Climate Modeling Program of the U.S. Department of Energy's Office of Science,  Cooperative Agreement DE-FC02-97ER62402. Benedict was funded by National Science Foundation (NSF) Rapid Response Research (RAPID) award AGS-1547910. The data presented in this manuscript is available at {\url{https://github.com/PeterHjortLauritzen/2017-JAMES-CESM2-SE.git}}.
 
