Dave's mods + some of my mods

--- a/src/bib.bib
+++ b/src/bib.bib
@@ -587,27 +587,18 @@ author={Brdar, Slavko and Baldauf, Michael and Dedner, Andreas and Klöfkorn, Ro
 pages={453-472},
 }
 
-@Article{gmdd-8-4623-2015,
+
+@Article{LetAl2015GMD,
 AUTHOR = {Lauritzen, P. H. and Bacmeister, J. T. and Callaghan, P. F. and Taylor, M. A.},
-TITLE = {NCAR global model topography generation software for unstructured grids},
-JOURNAL = {Geoscientific Model Development Discussions},
+TITLE = {{NCAR}\_{T}opo (v1.0): {NCAR} global model topography generation software for unstructured grids},
+JOURNAL = gmd,
 VOLUME = {8},
 YEAR = {2015},
-NUMBER = {6},
-PAGES = {4623--4651},
-DOI = {10.5194/gmdd-8-4623-2015}
+NUMBER = {12},
+PAGES = {3975-3986},
+DOI = {10.5194/gmd-8-3975-2015}
 }
 
-@article {TELA:TELA339,
-author = {WILLIAMSON, DAVID L.},
-title = {Convergence of aqua-planet simulations with increasing resolution in the Community Atmospheric Model, Version 3},
-journal = {Tellus A},
-volume = {60},
-number = {5},
-doi = {10.1111/j.1600-0870.2008.00339.x},
-pages = {848--862},
-year = {2008},
-}
 
 
 @article{Giraldo20083849,
@@ -4342,19 +4333,21 @@ doi = {10.1175/1520-0493(1997)125<2293:ROTBSC>2.0.CO;2},
   DOI = 	 {10.1007/978-3-642-11640-7_8}
 }
 
-@Article{JW2010LNCSE,
-  author = 	 {Christiane Jablonowski and David L. Williamson},
-  title = 	 {The Pros and Cons of Diffusion, Filters and Fixers in Atmospheric General Circulation Models., in: {P}.{H}. {L}auritzen, {R}.{D}. {N}air, {C}. {J}ablonowski, {M}. {T}aylor ({E}ds.), {N}umerical Techniques for Global Atmospheric Models},
-  journal = 	 {Lecture Notes in Computational Science and Engineering, {S}pringer, 2010, in press.},
-  year = 	 {2011},
-  OPTkey = 	 {},
-  volume = 	 {80},
-  OPTnumber = 	 {},
-  OPTpages = 	 {},
-  OPTmonth = 	 {},
-  OPTnote = 	 { },
-  OPTannote = 	 {}
+@Inbook{JW2010LNCSE,
+author="Jablonowski, Christiane
+and Williamson, David L.",
+editor="Lauritzen, Peter Hjort and Jablonowski, Christiane and Taylor, Mark and Nair, Ramachandran",
+title="The Pros and Cons of Diffusion, Filters and Fixers in Atmospheric General Circulation Models",
+bookTitle="Numerical Techniques for Global Atmospheric Models",
+year="2011",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="381--493",
+doi="10.1007/978-3-642-11640-7_13",
+url="https://doi.org/10.1007/978-3-642-11640-7_13"
 }
+
+
 
 
 @Article{T2011LNCSEb,
@@ -8105,10 +8098,9 @@ doi = {10.1175/JCLI-D-17-0838.1}
 author = {Gross, Markus and Wan, Hui and Rasch, Philip J. and Caldwell, Peter M. and Williamson, David L. and Klocke, Daniel and Jablonowski, Christiane and Thatcher, Diana R. and Wood, Nigel and Cullen, Mike and Beare, Bob and Willett, Martin and Lemarié, Florian and Blayo, Eric and Malardel, Sylvie and Termonia, Piet and Gassmann, Almut and Lauritzen, Peter H. and Johansen, Hans and Zarzycki, Colin M. and Sakaguchi, Koichi and Leung, Ruby},
 title = {Physics–Dynamics Coupling in weather, climate and Earth system models: Challenges and recent progress},
 journal = mwr,
-volume = {0},
-number = {0},
-pages = {null},
-year = {0},
+volume = {146},
+pages = {3505-3544},
+year = {2018},
 doi = {10.1175/MWR-D-17-0345.1}
 }
 
